# observ-demo

./: .gitignore  INFRASTRUCTURE_FIX.md  README.md  tmpclaude-af62-cwd
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml  setup.yml
cli/: pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cli/observ_demo/: __init__.py  __main__.py  cli.py  config.py
cli/observ_demo/commands/: __init__.py  deploy.py  init.py  status.py  teardown.py  traffic.py
cli/observ_demo/gcp/: __init__.py
cli/observ_demo/notifications/: __init__.py
cli/observ_demo/terraform/: __init__.py
config/: config.example.yaml
kubernetes/microservices-demo/: README.md  deploy.sh  values-gcp.yaml
kubernetes/observability/: README.md  deploy-observability-stack.sh  grafana-dashboards-configmap.yaml  grafana.yaml  jaeger-all-in-one.yaml  prometheus-values.yaml
kubernetes/observability/dashboards/: golden-signals.json  microservices-configmap.yaml  microservices-overview.json  slo-tracking.json
kubernetes/opentelemetry/: README-UPDATED.md  README.md  collector-crd.yaml  deploy.sh  kubeletstats-crd.yaml  kubeletstats-rbac.yaml  servicemonitor.yaml  values-collector.yaml  values-gcp.yaml  values-kubeletstats-autopilot.yaml  values-kubeletstats-final.yaml  values-kubeletstats.yaml
terraform/: .gitignore  README.md  backend.tf  backend.tf.template  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/gcp/budget-alerts/: main.tf  outputs.tf  variables.tf
terraform/modules/gcp/gke-cluster/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/gcp/gke-cluster/templates/: kubeconfig.tpl
terraform/modules/gcp/iap-config/: main.tf  outputs.tf  variables.tf
terraform/modules/gcp/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/gcp/monitoring/dashboards/: gke-metrics.json.tpl  overview.json.tpl
terraform/modules/gcp/project-setup/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/gcp/vpc-network/: main.tf  outputs.tf  variables.tf
